--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2024"
 cursive = { version = "0.21", features = ["toml"] }
 directories = "6.0"
 tokio-tungstenite = "0.28"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+url = "2.5"
+tokio = { version = "1.49", features = ["full"] }
+futures-util = "0.3"
+bcrypt = "0.18"
+sha2 = "0.10"
+hmac = "0.12"
