--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ serde_json = "1.0"
 url = "2.5"
 tokio = { version = "1.49", features = ["full"] }
 futures-util = "0.3"
-bcrypt = "0.18"
 sha2 = "0.10"
 hmac = "0.12"
+toml = "0.9"
