--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,7 @@ jobs:
     - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
       with:
         components: rustfmt
+        rustflags: "-D warnings -A unused" # disable unused warnings for now
     - name: Run build
       run: cargo build --verbose
     - name: Run tests
