--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "odarcon"
 version = "0.1.0"
+license = "GPL-2.0-or-later"
 edition = "2024"
 
 [dependencies]
@@ -10,6 +11,7 @@ tokio-tungstenite = "0.28"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.49", features = ["full"] }
+tokio-util = "0.7"
 futures-util = "0.3"
 sha2 = "0.10"
 hmac = "0.12"
