--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,12 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  check-licenses:
+    name: Check Licenses
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: EmbarkStudios/cargo-deny-action@v2
   build:
     name: Build (${{ matrix.platform }})
     runs-on: ${{ matrix.os }}
@@ -26,7 +32,6 @@ jobs:
         with:
           components: rustfmt
           rustflags: "-D warnings -A unused" # disable unused warnings for now
-      - uses: EmbarkStudios/cargo-deny-action@v2
       - name: Run build
         run: cargo build --verbose
       - name: Run tests
